{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 18,
  "lineage": "b200a784-cdfa-284a-9753-a2ca8d3bd3d2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-09T23:10:36.317-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/jenkins-firewall",
            "log_config": [],
            "name": "jenkins-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/jenkins-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongodb-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-09T23:10:36.319-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/mongodb-firewall",
            "log_config": [],
            "name": "mongodb-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/mongodb-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-09-09T23:10:36.295-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/web-firewall",
            "log_config": [],
            "name": "web-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/web-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tfansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220901",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/disks/terraform-ansible"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-anthos-359617/zones/us-central1-a/instances/terraform-ansible",
            "instance_id": "2366908062841803953",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "Name": "Terraform and Ansible Demo",
              "ssh-keys": "niteshsharma12012:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDehYCVWGc64ShKalMyXfmLo/iwvvnXAuZDDr0Swj27st6CoJNQ7KMCy0xld2hpl4aZKKLEmqpI4QE/2Z3ZyF8usDOexXfr5iXI3MfHu2UOhgGKBYV58k6Qnxo7D+1taKsuFxmpUop8sI8Yc12LqH6B0Pk35QM1hB3w67jlYQndKwDxrNhjf+r/TWUYcQm0cGpfqbPYXv4N1dwCEltwGDf/weq8Sa19qDG3Gqat+JU7rRcPVJqxbi8xZC9sOKOxyGiYjaqif6qUA9c8pIgjIojYF+rz+eo9Q/lYJZQsCwiE7NcIMIRZ79yK9DC5VW9RDnmrv5qdPQLCfV/W6OH8L345yblakmMHAtNqJwEAen4YCJnpQ8E94jOXnsK4mMqjveHsqNIpCdyo2uo/Xdcu3o1uoKykFg0zeLO [...]
            },
            "metadata_fingerprint": "TaasSMjiORA=",
            "name": "terraform-ansible",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.189.21",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/default",
                "network_ip": "10.128.0.40",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/regions/us-central1/subnetworks/default",
                "subnetwork_project": "gcp-anthos-359617"
              }
            ],
            "project": "gcp-anthos-359617",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/instances/terraform-ansible",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins",
              "mongodb",
              "web"
            ],
            "tags_fingerprint": "Dzk3v2Pre-E=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}